某OSの中央マネージャーを営んでいる人からもらった曲リストのフォーマットに合わせてロードするようにしたため、色々増えた プリインストール用の配列を読み込もうとしなかった 深めだったネストをなるべく浅くしてみた

--- a/Bad100Challenge.csproj
+++ b/Bad100Challenge.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="music_list.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
