りーどみーを少しスマートにした

--- a/Bad100Challenge.csproj
+++ b/Bad100Challenge.csproj
@@ -12,6 +12,9 @@
     <None Update="music_list.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
